<resources>
    <string name="app_name">Just Java Remake</string>
    <string name="Name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="startQuantity">2</string>
    <string name="Plus">+</string>
    <string name="order">order</string>
</resources>
